# rlist

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
docs/: index.md  installation.md  rlist.md  types.md
installation/: index.html
rlist/: index.html
search/: search_index.json
src/rlist/: functions.py  rlist.py  types.py
src/rlist/tests/: test_rlist.py
src/rlist/tests/cpython/: list_tests.py  seq_tests.py  test_rlist.py
src/rlist/tests/cpython/support/: __init__.py
types/: index.html
