[project]
name = "rlist"
version = "0.1.0"
description = "Record list with handy methods"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings[python]>=0.29.1",
    "ty>=0.0.1a14",
    "unittest-extensions>=0.4.0",
]
